# cuNumeric.jl

./: .clang-format  .gitignore  .gitmodules  .localenv  CMakeLists.txt  ENV  ENV_DAVID  LICENSE  Project.toml  README.md  build.sh
.github/workflows/: Documentation.yml  ci.yml
benchmark/: run_benchmark.sh  sgemm.jl
benchmark/cpp_matmul/: CMakeLists.txt  main.cpp
dev/: .documenter-siteinfo.json  index.html  objects.inv  search_index.js
dev/api/: index.html
dev/benchmark/: index.html
dev/dev/: index.html
dev/examples/: daxpy.jl  index.html  integrate.jl
dev/install/: index.html
dev/install_1.11/: index.html
dev/perf/: index.html
dev/usage/: index.html
docs/src/: api.md  benchmark.md  dev.md  examples.md  index.md  install.md  install_1.11.md  usage.md
examples/: Project.toml  custom_cuda.jl  gray-scott.jl  gray-scott.py  stencil.jl  stencil.py
examples/gray_scott_cpp/: CMakeLists.txt  build.sh  main.cpp
examples/test/: .gitignore  ccall_gc.jl  cxxwrap_gc.jl  default_gc.jl  default_gc_trials.jl  out_c.folded  out_c.perf  out_cxx.folded  out_cxx.perf  out_default.folded  out_default.perf  perf.data  perf.data.old  run.sh
examples/test/c/: Makefile  array.c  randomarray.c
examples/test/cpp/: CMakeLists.txt  main.cpp
garbage-gc-planning/callback/: callback  callback.c  callback.cc  callback.h  makefile
garbage-gc-planning/ldpreload/: makefile  test.c
jll/: README.md
lib/CNPreferences/: LICENSE
lib/CNPreferences/src/: CNPreferences.jl
libcxxwrap-julia-build/: CMakeCache.txt  CTestTestfile.cmake  JlCxxConfigExports.cmake  Makefile  cmake_install.cmake  cxxwrap_julia_export.h
libcxxwrap-julia-build/examples/: Makefile  cmake_install.cmake
libcxxwrap-julia-build/lib/: libcxxwrap_julia.so.0  libcxxwrap_julia.so.0.14.0
libcxxwrap-julia-build/test/: CTestTestfile.cmake  Makefile  cmake_install.cmake  test_cxxwrap  test_module  test_type_init
overheads/cunumeric-c-api/: c-ndarray.jl  cxx-ndarray.jl  run.sh
overheads/profile/: Project.toml  ccall_gc.jl  cxxwrap_gc.jl  default_gc.jl  run.sh
overheads/profile/GC_Benchmark/: Project.toml
overheads/profile/cpp/: build.sh
overheads/run-bench/: CACHE_SET_ENV  profile_matmul.jl  profile_matmul.py  profile_matrix.sh
pkg/: Project.toml  cuNumeric.jl
pkg/benchmark/: LocalPreferences.toml  Project.toml  benchmark_utils.jl  matmul.jl  matmul_benchmark.sh  run_benchmark.sh
pkg/benchmark/cpp_matmul/: build.sh  main.cpp
pkg/docs/: make.jl
pkg/docs/src/: api.md  benchmark.md  examples.md  index.md  install.md  perf.md
pkg/lib/CNPreferences/: Project.toml
pkg/src/: binary.jl  cuNumeric.jl  machine.jl  ndarray.jl  settings.jl  unary.jl  util.jl
pkg/test/: daxby.jl  runtests.jl
pkg/test/tests/: daxby.jl  daxby_advanced.jl  daxpy.jl  daxpy_advanced.jl  elementwise.jl  sgemm.jl  slicing.jl  types_dim.jl  unary_tests.jl
previews/PR12/: .documenter-siteinfo.json  search_index.js
previews/PR13/: .documenter-siteinfo.json  index.html
previews/PR13/benchmark/: index.html
previews/PR14/: .documenter-siteinfo.json  index.html
previews/PR15/: .documenter-siteinfo.json  index.html  search_index.js
previews/PR15/api/: index.html
previews/PR15/benchmark/: index.html
previews/PR16/: .documenter-siteinfo.json  index.html  search_index.js
previews/PR16/api/: index.html
previews/PR16/benchmark/: index.html
previews/PR16/examples/: index.html
previews/PR16/perf/: index.html
previews/PR16/usage/: index.html
previews/PR18/: .documenter-siteinfo.json  index.html
previews/PR18/api/: index.html
previews/PR18/benchmark/: index.html
previews/PR18/examples/: index.html
previews/PR18/perf/: index.html
previews/PR18/usage/: index.html
previews/PR19/: .documenter-siteinfo.json  index.html
previews/PR19/api/: index.html
previews/PR19/benchmark/: index.html
previews/PR19/examples/: index.html
previews/PR19/perf/: index.html
previews/PR19/usage/: index.html
previews/PR20/: .documenter-siteinfo.json  search_index.js
previews/PR20/usage/: index.html
previews/PR21/: .documenter-siteinfo.json  index.html  objects.inv
previews/PR21/api/: index.html
previews/PR21/benchmark/: index.html
previews/PR21/examples/: index.html
previews/PR21/perf/: index.html
previews/PR21/usage/: index.html
previews/PR22/: .documenter-siteinfo.json  search_index.js
previews/PR22/api/: index.html
previews/PR22/examples/: index.html
previews/PR22/perf/: index.html
previews/PR22/usage/: index.html
previews/PR23/: .documenter-siteinfo.json  search_index.js
previews/PR23/benchmark/: index.html
previews/PR23/examples/: index.html
previews/PR23/usage/: index.html
previews/PR24/: .documenter-siteinfo.json  index.html
previews/PR24/api/: index.html
previews/PR24/benchmark/: index.html
previews/PR24/examples/: index.html
previews/PR24/perf/: index.html
previews/PR24/usage/: index.html
previews/PR25/: .documenter-siteinfo.json  index.html  objects.inv  search_index.js
previews/PR25/api/: index.html
previews/PR25/benchmark/: index.html
previews/PR25/dev/: index.html
previews/PR25/examples/: index.html
previews/PR26/: .documenter-siteinfo.json  index.html
previews/PR26/api/: index.html
previews/PR27/: .documenter-siteinfo.json  index.html  search_index.js
previews/PR28/: .documenter-siteinfo.json  index.html
previews/PR29/: .documenter-siteinfo.json  index.html
previews/PR30/: .documenter-siteinfo.json  index.html
previews/PR35/: .documenter-siteinfo.json  index.html  objects.inv
scripts/: README.md  build_cpp_wrapper.sh  build_cupynumeric.sh  install_cxxwrap.sh  legion_redop_patch.inl  patch_legion.sh
src/: binary.jl  capi.jl  cuNumeric.jl  cuda.jl  ndarray.jl  unary.jl
test/: runtests.jl
test/tests/: daxpy.jl  daxpy_advanced.jl  elementwise.jl  sgemm.jl  slicing.jl
tests/: run.sh
tests/julia/: daxby.jl  helper.jl
wrapper/: CMakeLists.txt  matmulfp32.cpp  test.cpp  wrapper.cpp
wrapper/include/: accessors.h  ndarray_c_api.h  types.h  ufi.h
wrapper/src/: _____.cpp  cuda.cpp  ndarray.cpp  ndarray_c_api.c  types.cpp  wrapper.cpp
(+54 files in other folders)
